# ab-simulator

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs-deploy.yml
api/: index.html
api/criteria/: index.html
api/generators/: index.html
api/simulator/: index.html
api/types/: index.html
benchmark/: index.html
changelog/: index.html
conf/: config.yaml
conf/criterion/: bootstrap.yaml  cupac.yaml  cuped.yaml  delta.yaml  linearization.yaml  paired.yaml  post_stratification.yaml  welch.yaml  z_proportion.yaml
conf/data/: binary.yaml  continuous.yaml  ratio.yaml
conf/experiment/: binary_z_proportion.yaml  bootstrap_vs_welch.yaml  continuous_welch_vs_cuped.yaml  paired_design.yaml  ratio_delta_vs_linearization.yaml
contributing/: index.html
criteria/: index.html
criteria/bootstrap/: index.html
criteria/cupac/: index.html
criteria/cuped/: index.html
criteria/delta_method/: index.html
criteria/linearization/: index.html
criteria/paired_stratification/: index.html
criteria/post_stratification/: index.html
criteria/welch/: index.html
criteria/z_proportion/: index.html
docs/: benchmark.csv  benchmark.md  index.md  real_data.md  tutorial.md
docs/api/: criteria.md  generators.md  index.md  simulator.md  types.md
docs/criteria/: bootstrap.md  cupac.md  cuped.md  delta_method.md  index.md  linearization.md  paired_stratification.md  post_stratification.md  welch.md  z_proportion.md
examples/: cuped_vs_ttest.ipynb  real_data_power_analysis.ipynb
real_data/: index.html
scripts/: benchmark.py
search/: search_index.json
src/absim/: __init__.py  _stats.py  _version.py  cli.py  simulator.py  types.py
src/absim/config/: __init__.py  schema.py
src/absim/criteria/: __init__.py  base.py  bootstrap.py  cupac.py  cuped.py  delta.py  linearization.py  paired.py  poststrat.py  welch.py  zproportion.py
src/absim/generators/: __init__.py  base.py  binary.py  continuous.py  empirical.py  ratio.py
src/absim/reports/: __init__.py  io.py  plot.py
tests/: conftest.py
tests/property/: test_invariants.py
tests/statistical/: test_fpr_power.py
tests/unit/: test_bootstrap.py  test_cli.py  test_cli_run.py  test_config_schema.py  test_cuped_cupac.py  test_empirical_generator.py  test_generators.py  test_ratio_criteria.py  test_registry.py  test_reports.py  test_simulator.py  test_stats.py  test_strat_criteria.py  test_welch.py  test_zproportion.py
tutorial/: index.html
