[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "absim"
version = "0.2.1"
description = "Monte Carlo validator for A/B test criteria — verify FPR ≈ α and quantify power on synthetic data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Danila Yablochnikov", email = "yablochnikovdanila@gmail.com" },
]
keywords = ["ab-testing", "experimentation", "statistics", "monte-carlo", "cuped", "bootstrap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyarrow>=14",
    "joblib>=1.3",
    "hydra-core>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/yablochnikovds/ab-simulator"
Documentation = "https://yablochnikovds.github.io/ab-simulator/"
Repository = "https://github.com/yablochnikovds/ab-simulator"
Issues = "https://github.com/yablochnikovds/ab-simulator/issues"
Changelog = "https://github.com/yablochnikovds/ab-simulator/blob/main/CHANGELOG.md"

[project.scripts]
absim = "absim.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-seaborn",
    "pandas-stubs",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/absim"]

[tool.hatch.build.targets.wheel.force-include]
# Ship the Hydra config tree alongside the package so the `absim run …` CLI
# works for users who installed via `pip install absim` (no source checkout).
"conf" = "absim/_conf"

[tool.hatch.build.targets.sdist]
include = [
    "src/absim",
    "conf",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "ARCHITECTURE.md",
    "CONTRIBUTING.md",
]

# ----------------------------------------------------------------------
# Pytest filter narrowing — keep "warning is an error" honest
# (see [tool.pytest.ini_options] block below)
# ----------------------------------------------------------------------

# ----------------------------------------------------------------------
# Ruff
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "C4",   # comprehensions
    "SIM",  # simplify
    "RUF",  # ruff-specific
    "PL",   # pylint
    "PT",   # pytest-style
    "D",    # pydocstyle
    "NPY",  # numpy
]
ignore = [
    "D100", "D104", "D105", "D107",  # missing module/package/magic/init docstrings
    "D203", "D213",  # incompatible docstring style picks (numpydoc preferred)
    "PLR0913",  # too many arguments
    "PLR0912",  # too many branches (stats code has natural cases)
    "PLR0915",  # too many statements
    "PLR2004",  # magic value comparisons (annoying in tests)
    "PLC0415",  # in-function imports (we lazy-import for CLI startup)
    "PLW2901",  # for-loop variable overwrite (idiomatic with pandas iteration)
    "N803",  # argument names (we use Y, X for stats)
    "N806",  # variable in function should be lowercase (we use Y, X for stats)
    "E741",  # ambiguous variable name (we use l for linearization)
    "RUF001", "RUF002", "RUF003",  # unicode (α, μ, ×, ε, ...) is intentional in stats
    "SIM108",  # ternary not always more readable
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "PLR2004", "PLR0915", "S101", "C408", "RUF007", "RUF043", "RUF046"]
"examples/**" = ["D", "PLR2004"]
"scripts/**" = ["D"]
"src/absim/cli.py" = ["D"]
"src/absim/config/schema.py" = ["D101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

# ----------------------------------------------------------------------
# Mypy
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true
files = ["src/absim"]
plugins = []

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "joblib",
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
    "hydra.*",
    "omegaconf.*",
    "pyarrow.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
check_untyped_defs = true

# ----------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
markers = [
    "statistical: long-running statistical validation tests (FPR/Power)",
    "slow: tests that take more than a few seconds",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:hydra.*",
    "ignore::DeprecationWarning:omegaconf.*",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:joblib.*",
    "ignore::UserWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
branch = true
source = ["src/absim"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false
